[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scenes/Samus/shotScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile (Zero Mission).png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Super Missile (Zero Mission).png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Beam 1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile trail.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Beam2 .png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Beam impact 3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Beam impact 1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Beam impact 2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile impact 2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile impact 1.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile impact 3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Samus/Weapons/Missile impact 4.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "missile impact",
"speed": 25.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "super missile impact",
"speed": 25.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "missile",
"speed": 0.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "beam impact",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "super missile",
"speed": 0.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "beam",
"speed": 30.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 4 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.737255, 0.447059, 0.105882, 1, 0.47451, 0.47451, 0.47451, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 1.5, 5, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 0.0
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.1
hue_variation_random = 0.1

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.5
trail_size_modifier = SubResource( 7 )
emission_shape = 2
emission_box_extents = Vector3( 5, 1, 1 )
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4

[node name="shotScene" type="Area2D"]
collision_layer = 4
collision_mask = 25
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "missile"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -5.96046e-08, -1.78814e-07 )
scale = Vector2( 0.3, 0.5 )

[node name="Particles" type="Node2D" parent="."]

[node name="BeamTrail" type="Particles2D" parent="Particles"]
visible = false
show_behind_parent = true
position = Vector2( 0, 5 )
amount = 100
lifetime = 0.15
process_material = SubResource( 5 )

[node name="MissileTrail" type="Particles2D" parent="Particles"]
show_behind_parent = true
position = Vector2( 0, 11 )
rotation = 1.5708
emitting = false
lifetime = 0.5
local_coords = false
process_material = SubResource( 8 )
texture = ExtResource( 5 )

[node name="Timers" type="Node2D" parent="."]

[node name="TimerA" type="Timer" parent="Timers"]
wait_time = 3.0

[node name="TimerB" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_shotScene_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_shotScene_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timers/TimerB" to="." method="_on_TimerB_timeout"]
